maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: value North is not a member of object plm.universe.Direction
	while(!estSurBiscuit() && (getDirection != Direction.North() || estFaceMur()))
                                                             ^